--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,8 @@
 image:
   file: .gitpod.Dockerfile
 ports:
-  - port: 4040 # spark
-    onOpen: open-preview
-#   - port: 8888 # jupyter
-#     onOpen: open-preview
-# tasks:
-#   - command: >
-#       jupyter notebook --port=8888
+  - port: 4040 # Spark
+  - port: 8888 # Jupyter
+tasks:
+  - command: >
+      jupyter notebook --port=8888
