--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,7 @@
 image:
   file: .gitpod.Dockerfile
-ports:
-  - port: 4040 # Spark
-  - port: 8888 # Jupyter
 tasks:
   - command: >
-      jupyter notebook --port=8888
+    name: Workspace
+  - command: jupyter notebook --port=8888
+    name: Jupyter
