--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 image:
   file: .gitpod.Dockerfile
 tasks:
-  - command: jupyter notebook --port=8888
+  - command: jupyter notebook --NotebookApp.allow_origin=\'$(gp url 8888)\'
     name: Jupyter
   - command: >
     name: Workspace
