--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,8 @@
 image:
   file: .gitpod.Dockerfile
 tasks:
-  - command: jupyter notebook --NotebookApp.allow_origin=\'$(gp url 8888)\'
+  - before: pip3 install -r requirements.txt
+    command: jupyter notebook --NotebookApp.allow_origin=\'$(gp url 8888)\'
     name: Jupyter
   - command: >
     name: Workspace
